video lessons added

--- a/views/dca103practicalwelcomepage.ejs
+++ b/views/dca103practicalwelcomepage.ejs
@@ -5,7 +5,8 @@
 <%- include('layouts/headers') -%>
 
 <body>
-    
+   
+   <%- include('layouts/navbar') -%> 
 <!-- --------------main container section------------------ -->
 
 <div class="container">
@@ -18,11 +19,11 @@
           <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
             <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-arrow-left text-primary"></i> Dashboard</i> </a>
-            <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
+            <span class="float-end"> <%- include('layouts/subjectMenuPractical') -%> </span>
             </div>
             <hr class="w-25 mx-auto text-secondary mt-4 mb-0">
           <div class="mt-0 rounded text-justify">
-            <p class="text-muted fw-light text-center mb-0"> DCA-103 : Thuhmahruai </p>
+            <p class="text-muted fw-light text-center mb-0"> DCA-103 : Practical Thuhmahruai </p>
             <hr class="w-25 mx-auto text-secondary my-1">
             <h3 class="fw-light fs-1 text-center mt-0 mb-0">  Office Automation Software  <br></h3>
             
@@ -30,9 +31,11 @@
             
             <p class="fw-normal">Subject pathumna (a code hming <code> DCA-103) </code>kan zir dawn a, 
             a subject hming chu  <code> Office Automation Software </code> a ni. 
-            
             He subject-ah hian <code>Microsoft Word </code> te,<code> Excel</code> te leh <code>powerpoint </code>  te kan zir ang a, subject khatah 
-            software chi hrang pathum kan zir dawn a, Microsoft Office version 2007 kan zir ang. He subject-ah hian hetiangin mark thendarh a ni; <em>Microsoft Word </em>- 15 marks, <em>Microsoft Excel </em>- 15 marks, <em>Microsoft Powerpoint </em>- 10 marks tiin.
+            software chi hrang pathum kan zir dawn a, Microsoft Office version 2007 kan zir ang. 
+            </p>
+            <p class="fw-normal">
+            He subject-ah hian hetiangin mark thendarh a ni; <em>Microsoft Word </em>- 15 marks, <em>Microsoft Excel </em>- 15 marks, <em>Microsoft Powerpoint </em>- 10 marks tiin.
               
             </p>
 
@@ -68,7 +71,7 @@
                             
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               <% 
@@ -105,121 +108,121 @@
                         if(paidStudent.includes('paid')) {
                         %>
                               
-                              <div class=" col-lg-3 col-md-6 col-sm-6"> 
+                              <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               
                                 </div>
 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
 
-                                <a href="dca103onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 (word) <i class="fas fa-angle-right"></i></button></a>
+                                <a href="dca103practicalclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 (word) <i class="fas fa-angle-right"></i></button></a>
 
                                 </div>
                                 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
                                 
-                              <a href="dca103onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 (word) <i class="fas fa-angle-right"></i></button></a>
 
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
 
-                              <a href="dca103onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 (word) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6">
                               
-                              <a href="dca103onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 (word) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
-                            <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--<div class="col-lg-3 col-md-6 col-sm-6"> -->
                               
-                              <a href="dca103onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>-->
                             
-                            </div>
+                            <!--</div>-->
                             
-                            <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--<div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
-                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
-                              <a href="dca103onlineclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                            <!--  <a href="dca103practicalclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
                                 
-                                </div>
+                            <!--    </div>-->
                                 
                                 <% } %>
 
