--- a/views/dcatheorywelcomepage.ejs
+++ b/views/dcatheorywelcomepage.ejs
@@ -6,8 +6,6 @@
 
 <body>
     
-    <%- include('layouts/navbar') -%>
-    
 <!-- --------------main container section------------------ -->
 
 <div class="container">
@@ -20,7 +18,7 @@
           
             <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
+            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-arrow-left text-primary"></i> Dashboard</i> </a>
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
             </div>
             <hr class="w-25 mx-auto text-secondary mt-4 mb-0">
@@ -32,7 +30,7 @@
             <hr class="text-muted mt-0">
             
             <p class="fw-normal px-3">DCA I Semester hi <code>thlaruk</code> course a ni a, subject ruk a awm a, subject zawng zawngah 
-            theory leh practical a awm vek a ni.<a class="text-secondary" onclick="myFunction()" id="myBtn" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">.. More...
+            theory leh practical a awm vek a ni.<a class="text-secondary" onclick="myFunction()" id="myBtn" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">.. Read More...
                     </a>
             </p>
                   <div class="collapse" id="collapseExample">
