--- a/views/layouts/subjectMenuPractical.ejs
+++ b/views/layouts/subjectMenuPractical.ejs
@@ -12,17 +12,17 @@
                   
                   <li><a class="dropdown-item" href="dcapracticalwelcomepage"> Practical Intro </a></li>
                   
-                  <li><a class="dropdown-item" href="#">DCA-101</a></li>
+                  <!--<li><a class="dropdown-item" href="dca101practicalwelcomepage">DCA-101</a></li>-->
                   
-                  <li><a class="dropdown-item" href="#">DCA-102</a></li>
+                  <!--<li><a class="dropdown-item" href="dca102practicalwelcomepage">DCA-102</a></li>-->
                   
-                  <li><a class="dropdown-item" href="#">DCA-103</a></li>
+                  <li><a class="dropdown-item" href="dca103practicalwelcomepage">DCA-103</a></li>
                   
-                  <li><a class="dropdown-item" href="#">DCA-104</a></li>
+                  <!--<li><a class="dropdown-item" href="dca104practicalwelcomepage">DCA-104</a></li>-->
                   
-                  <li><a class="dropdown-item" href="#">DCA-105</a></li>
+                  <!--<li><a class="dropdown-item" href="dca105practicalwelcomepage">DCA-105</a></li>-->
                   
-                  <li><a class="dropdown-item" href="#">DCA-106</a></li>
+                  <!--<li><a class="dropdown-item" href="dca106practicalwelcomepage">DCA-106</a></li>-->
                 
                 </ul>
               
