batch wise list

--- a/views/whotesttoday.ejs
+++ b/views/whotesttoday.ejs
@@ -4,13 +4,10 @@
   
 <%- include('layouts/headers') -%>
 
-
 <body>
     
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
-
-
     <!-- --------------main container section------------------ -->
 
 <div class="container">
@@ -57,8 +54,6 @@
               
               <td class="border ps-3 small fw-normal"> Student's Name</td>
                       
-              <td class="border ps-3 small fw-normal"> Address </td>
-              
             </tr>
             
           </thead>
@@ -178,7 +173,7 @@
             
             var uniqueAddress = studentAddress.filter(onlyUnique);
             
-            for(var i=0; i < uniqueAddress.length; i++) {
+            for(var i=0; i < uniqueName.length; i++) {
             
             %>
              <tr>
@@ -190,10 +185,7 @@
                             
                           </td>
                           
-                          <td class="border"> <%= capitalizeFirstLetter(uniqueAddress[i]) %> </td>
-                          
                         </tr>
-        
             
             <% } } %>
             
