dca103 chaper9 and 10 added

--- a/views/dca103practicalclasschapter10.ejs
+++ b/views/dca103practicalclasschapter10.ejs
@@ -38,7 +38,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-9 (word)</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-10 (Excel)</button>
                             
                               <!--include word excel powerpoint menu-->
                               
@@ -46,7 +46,9 @@
                             
                           </div>
 
-            <p class="fw-normal mx-auto mt-3">Chapter 9-ah hian <code>MAIL MERGE</code> kan en ho dawn a ni. </p>
+            <p class="fw-normal mx-auto mt-3">Chapter 10 atang hian <code>SPREADSHEET PACKAGE</code> kan zir tan ang a, chu chu <code>Microsoft Office Excel</code> 
+            
+            tihna a ni a. He chapter-ah hian <code>INTRODUCTION TO SPREADSHEETS</code> kan en ho dawn a ni. </p>
             
             <hr>
             
@@ -75,8 +77,8 @@
                         
                         <em>
                          
-                        Mail Merge (The basic concept of merging documents, Working with master documents,
-Merging documents) (3 MARKS) 
+                        Introduction to Spreadsheets (Getting Started, The worksheet, saving the worksheet, closing a
+worksheet, exiting Excel) (1 MARK) 
                   
                         </em> 
             
@@ -107,12 +109,12 @@ Merging documents) (3 MARKS)
                       
                       <div class="ratio ratio-16x9">
                         
-                          <iframe src="https://www.youtube.com/embed/6OEPEjFew2s" title="dca103 chapter-9 video" allowfullscreen></iframe>
+                          <iframe src="https://www.youtube.com/embed/cJEA-54XCvU" title="dca103 chapter-10 video" allowfullscreen></iframe>
 
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-9</small>
+                        <small>DCA-103 Chapter-10</small>
                       
                       </div>
                   
