--- a/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
+++ b/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
@@ -26,7 +26,7 @@
                                       
                                       <li><a class="dropdown-item" href="dca103practicalclasschapter8"> Chapter-8 (word)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter9"> Chapter-9 (word)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter9"> Chapter-9 (word)</a></li>
                                      
                                       
                                     </ul>
@@ -43,7 +43,7 @@
                                     
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter10"> Chapter-10 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter10"> Chapter-10 (excel)</a></li>
                                       
                                       <!--<li><a class="dropdown-item" href="dca103practicalclasschapter11"> Chapter-11 (excel)</a></li>-->
                                       
