--- a/views/dca103practicalwelcomepage.ejs
+++ b/views/dca103practicalwelcomepage.ejs
@@ -151,17 +151,17 @@
                             
                             </div>
 
-                            <!--<div class="col-lg-3 col-md-6 col-sm-6"> -->
+                            <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                            <!--  <a href="dca103practicalclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>
                             
-                            <!--</div>-->
+                            </div>
                             
-                            <!--<div class="col-lg-3 col-md-6 col-sm-6"> -->
+                            <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
                                 
                             <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
