server muang siamthat a ni

--- a/views/dcatheorywelcomepage.ejs
+++ b/views/dcatheorywelcomepage.ejs
@@ -5,6 +5,8 @@
 <%- include('layouts/headers') -%>
 
 <body>
+  
+  <%- include('layouts/navbar') -%>
     
 <!-- --------------main container section------------------ -->
 
