--- a/views/stdList.ejs
+++ b/views/stdList.ejs
@@ -35,19 +35,19 @@
                 <tr>
                     
                     <td colspan="3"><a href="all/stdTopPerformers" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check who answer assignment...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Assignment chhangtu list...</span></a></td>
                     
                 </tr>
                 <tr>
                     
                     <td colspan="3"><a href="all/stdAssignmentFinished" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check who finished assignment...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Assigment chhang zo tawhte...</span></a></td>
                     
                 </tr>
                 <tr>
                     
                     <td colspan="3"><a href="all/whotesttoday" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check who test today...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Vawiina assignment chhangtute...</span></a></td>
                     
                 </tr>
 
