--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -11,7 +11,7 @@
     
 
 
-    <!-- --------------main container section------------------ -->
+    <!--main container section-->
 
 <div class="container">
   
@@ -34,7 +34,7 @@
       
       <!--second lane-->
      
-      <!-- --------------assignment record table------------------ -->
+      <!--assignment record table-->
     
       <div class="table-responsive">
         
@@ -65,7 +65,6 @@
           <tbody class="border bg-white">
             
             <% 
-
               var serialNo = 0;
               
           for (var i=0; i < Students.length; i++) {
